[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/crafting.gd" type="Script" id=1]
[ext_resource path="res://menus/itemButton.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="field_craftingSkillName" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "#CRAFTING SKILL NAME HERE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_recipes" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 250.0
margin_right = 200.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "RECIPES"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_recipes2" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 250.0
margin_right = 440.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "RESULT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="scroll" type="ScrollContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 290.0
margin_right = 260.0
margin_bottom = 730.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0

[node name="vbox" type="VBoxContainer" parent="scroll" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 220.0
margin_bottom = 1000.0
rect_min_size = Vector2( 220, 1000 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="button_combine" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 670.0
margin_right = 440.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "COMBINE"
flat = false
align = 1

[node name="button_back" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 880.0
margin_right = 320.0
margin_bottom = 940.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = false
align = 1

[node name="field_description" type="RichTextLabel" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 40.0
margin_right = 460.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "#DESCRIPTION OF WHAT THIS TRADESKILL DOES/MAKES"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="field_heroSkill" type="RichTextLabel" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 150.0
margin_right = 460.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "#HERO NAME AND SKILL LEVEL"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="field_success" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 400.0
margin_right = 460.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "# CHANCE OF SUCCESS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_craftingTime" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 650.0
margin_right = 460.0
margin_bottom = 664.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "#CRAFT TIME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="field_timeRemaining" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 750.0
margin_right = 440.0
margin_bottom = 790.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "#TIME REMAINING"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="recipeData" type="Node2D" parent="." index="11"]

[node name="ingredient1" parent="recipeData" index="0" instance=ExtResource( 2 )]

margin_left = 290.0
margin_top = 430.0
margin_right = 360.0
margin_bottom = 530.0

[node name="ingredient2" parent="recipeData" index="1" instance=ExtResource( 2 )]

margin_left = 380.0
margin_top = 430.0
margin_right = 450.0
margin_bottom = 530.0

[node name="ingredient3" parent="recipeData" index="2" instance=ExtResource( 2 )]

margin_left = 290.0
margin_top = 550.0
margin_right = 360.0
margin_bottom = 650.0

[node name="ingredient4" parent="recipeData" index="3" instance=ExtResource( 2 )]

margin_left = 380.0
margin_top = 550.0
margin_right = 450.0
margin_bottom = 650.0

[node name="result" parent="recipeData" index="4" instance=ExtResource( 2 )]

margin_left = 330.0
margin_top = 290.0
margin_right = 400.0
margin_bottom = 390.0

[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]


